...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text(
          'Update mug',
          style: TextStyle(fontSize: 24),
        ),
      ),
      body: Form(
        key: _formKey,
        child: Padding(
...
